<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <!-- Project from https://start.vaadin.com/project/25bb864a-5cfc-4bcc-8a0c-1abc5ff20bd8 -->
  <groupId>life.qbic</groupId>
  <artifactId>datamanager</artifactId>
  <name>Data Manager</name>
  <version>1.11.1</version>
  <modules>
    <module>user-interface</module>
    <module>identity</module>
    <module>broadcasting</module>
    <module>application-commons</module>
    <module>logging</module>
    <module>subscription-provider</module>
    <module>subscription-api</module>
    <module>finances</module>
    <module>project-management</module>
    <module>domain-concept</module>
    <module>identity-api</module>
    <module>identity-infrastructure</module>
    <module>project-management-infrastructure</module>
    <module>email-service-provider</module>
    <module>finances-infrastructure</module>
    <module>finances-api</module>
  </modules>
  <packaging>pom</packaging>

  <properties>
    <java.version>21</java.version>
    <vaadin.version>24.4.13</vaadin.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <jakarta.persistence.version>3.2.0</jakarta.persistence.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jackson.version>2.18.3</jackson.version>
    <sonar.projectKey>qbicsoftware_data-manager-app</sonar.projectKey>
    <sonar.organization>qbicsoftware</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
  </properties>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.6</version>
  </parent>

  <repositories>
    <!-- The order of definitions matters. Explicitly defining central here to make sure it has the highest priority. -->
    <!-- Main Maven repository -->
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>vaadin-prereleases</id>
      <url>
        https://maven.vaadin.com/vaadin-prereleases/
      </url>
    </repository>
    <!-- Repository used by many Vaadin add-ons -->
    <repository>
      <id>Vaadin Directory</id>
      <url>https://maven.vaadin.com/vaadin-addons</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>nexus-snapshots</id>
      <name>QBiC Snapshots</name>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <checksumPolicy>fail</checksumPolicy>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
      <url>https://qbic-repo.qbic.uni-tuebingen.de/repository/maven-snapshots</url>
    </repository>
    <repository>
      <id>nexus-releases</id>
      <name>QBiC Releases</name>
      <releases>
        <checksumPolicy>fail</checksumPolicy>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>https://qbic-repo.qbic.uni-tuebingen.de/repository/maven-releases</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <!-- The order of definitions matters. Explicitly defining central here to make sure it has the highest priority. -->
    <pluginRepository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
    <pluginRepository>
      <id>vaadin-prereleases</id>
      <url>
        https://maven.vaadin.com/vaadin-prereleases/
      </url>
    </pluginRepository>
  </pluginRepositories>
  <distributionManagement>
    <repository>
      <uniqueVersion>true</uniqueVersion>
      <id>nexus-releases</id>
      <name>QBiC Releases</name>
      <url>https://qbic-repo.qbic.uni-tuebingen.de/repository/maven-releases</url>
    </repository>
    <snapshotRepository>
      <uniqueVersion>false</uniqueVersion>
      <id>nexus-snapshots</id>
      <name>QBiC Snapshots</name>
      <url>https://qbic-repo.qbic.uni-tuebingen.de/repository/maven-snapshots</url>
    </snapshotRepository>
  </distributionManagement>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.spockframework</groupId>
        <artifactId>spock-core</artifactId>
        <version>2.4-M4-groovy-4.0</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.spockframework</groupId>
        <artifactId>spock-spring</artifactId>
        <version>2.4-M4-groovy-4.0</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.groovy</groupId>
        <artifactId>groovy-all</artifactId>
        <version>4.0.24</version>
        <type>pom</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.jobrunr</groupId>
        <artifactId>jobrunr-spring-boot-3-starter</artifactId>
        <version>7.3.2</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-jsr310</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>${jackson.version}</version>
      </dependency>

    </dependencies>

  </dependencyManagement>
  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.6.0</version> <!-- Use the latest version -->
        <executions>
          <execution>
            <goals>
              <goal>aggregate-add-third-party</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <!-- Configuration for licenses aggregation -->
          <outputDirectory>${project.build.directory}/generated-sources/license</outputDirectory>
          <thirdPartyFilename>THIRD-PARTY.txt</thirdPartyFilename>
          <failIfWarning>false</failIfWarning> <!-- Optional: fail the build on issues -->
          <includeTransitiveDependencies>true</includeTransitiveDependencies>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.gmavenplus</groupId>
        <artifactId>gmavenplus-plugin</artifactId>
        <version>4.0.1</version>
        <executions>
          <execution>
            <id>default</id>
            <goals>
              <goal>addSources</goal>
              <goal>addTestSources</goal>
              <goal>generateStubs</goal>
              <goal>compile</goal>
              <goal>generateTestStubs</goal>
              <goal>compileTests</goal>
              <goal>removeStubs</goal>
              <goal>removeTestStubs</goal>
            </goals>
          </execution>
          <execution>
            <id>site</id>
            <phase>site</phase>
            <goals>
              <goal>generateStubs</goal>
              <goal>generateTestStubs</goal>
              <goal>groovydoc</goal>
              <goal>groovydocTests</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <groovyDocOutputDirectory>${project.build.directory}/site/gapidocs
          </groovyDocOutputDirectory>
          <testGroovyDocOutputDirectory>${project.build.directory}/site/testgapidocs
          </testGroovyDocOutputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.2</version>
        <configuration>
          <useModulePath>false</useModulePath>
          <includes>
            <include>**/*Spec.class</include>
            <include>**/*Test.class</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
        <plugin>
          <groupId>org.sonarsource.scanner.maven</groupId>
          <artifactId>sonar-maven-plugin</artifactId>
          <version>5.0.0.4389</version>
        </plugin>
    </plugins>
  </build>
</project>
